<resources>
    <string name="app_name">Capricho2021</string>
    <string name="action_settings">Settings</string>
    <string name="titulo">Capricho 2021</string>
    <string name="usuario">Usuário:</string>
    <string name="senha">Senha:</string>
    <string name="login">Login</string>
    <string name="nome_fornecedor">Nome do Fornecedor</string>
    <string name="nome_avaliador">Nome do Avaliador</string>
    <string name="numero_lote">00000</string>
    <string name="quantidade">Quantidade:</string>
    <string name="objeto">Objeto</string>
    <string name="um">1</string>
    <string name="zero">0</string>
    <string name="lote">Lote: </string>
    <string name="excluir">Excluir</string>
    <string name="observacao">Observações:</string>
    <string name="verificar">Verificar</string>
    <string name="title_activity_seleciona_lote">SelecionaLoteActivity</string>
    <string name="title_activity_avalia_lote">AvaliaLoteActivity</string>
    <string name="banco_dados">Banco de dados</string>
    <string name="servidor_nao_encontrado">Servidor não encontrado</string>
    <string name="informacoes_incorretas">Informações incorretas</string>
    <string name="atualize_versão_aplicativo">Atualize a versão deste app</string>
    <string name="acesso_autorizado">Acesso autorizado</string>
    <string name="servidor">Servidor</string>

    <string name="titulo_cadastro_clientes">Cadastro de Clientes</string>
    <string name="cpf_hint">CPF do cliente</string>
    <string name="nome_completo">Nome completo</string>
    <string name="genero">Genero</string>
    <string name="celular_ou_telefone">Celular ou telefone</string>
    <string name="email">e-mail</string>
    <string name="endereco">Endereco</string>
    <string name="numero">Número</string>
    <string name="bairro">Bairro</string>
    <string name="complemento">Complemento</string>
    <string name="cidade">Cidade</string>
    <string name="estado">UF</string>

    <string-array name="generos">
        <item>Feminino</item>
        <item>Masculino</item>
        <item>Indefinido</item>
    </string-array>

</resources>
